fix: List.copyOf 로 수정